sas-core/main/default/objects/Customer_Claim__c/Customer_Claim__c.object-meta.xml
<CustomObject>
    <description>Customer claim is a single record of a customer claiming compensation, ticket refund or reimbursements of costs filed with SAS</description>
    <label>Customer Claim</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{000000}</displayFormat>
        <label>Customer Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>