sas-core/main/default/objects/Customer_Claim__c/fields/Customer_Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Claim_Type__c</fullName>
    <label>Customer Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
            <value>
                <fullName>EU261</fullName>
            </value>
            <value>
                <fullName>Denied Boarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>