sas-core/main/default/objects/Customer_Claim__c/fields/Legal_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Firm</label>
    <referenceTo>LIA_Firm__c</referenceTo>
    <relationshipLabel>Customer Claims</relationshipLabel>
    <relationshipName>Customer_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>