sas-core/main/default/objects/Customer_Claim__c/fields/Major_Event__c.field-meta.xml
<CustomField>
    <fullName>Major_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major Event</label>
    <referenceTo>LIA_Major_Event__c</referenceTo>
    <relationshipLabel>Customer Claims</relationshipLabel>
    <relationshipName>Customer_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>