sas-core/main/default/objects/Customer_Claim__c/fields/PIR__c.field-meta.xml
<CustomField>
    <fullName>PIR__c</fullName>
    <label>PIR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>